<resources>
    <string name="app_name">InventoryApp</string>
    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Items</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>


    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a item</string>
    <string name="editor_update_item_failed">Item update fail</string>
    <string name="editor_update_item_successful">Item update succesfully</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_successful">Item deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_item_failed">Item with deleting pet</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this item?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <string name="hint_item_quantity">Amount</string>
    <string name="hint_item_overview">Name</string>
    <string name="category_price">Price per item</string>
    <string name="hint_item_price">Cost in dollars</string>
    <string name="category_email">Email</string>
    <string name="hint_item_email">abc@gmail.com</string>
    <string name="category_phone">Phone</string>
    <string name="hint_item_phone">123456789</string>
    <string name="editor_insert_item_failed">Item insert failed</string>
    <string name="editor_insert_item_successful">Item insert succesfully</string>
    <string name="editor_activity_title_new_item">Add a new item</string>
    <string name="editor_activity_title_edit_item">Edit an item</string>
</resources>