<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_overview"
            style="@style/CategoryStyle"/>

        <TextView
            android:id="@+id/inventory_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_overview"
            style="@style/ItemStyle"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_quantity"
            style="@style/CategoryStyle"/>

        <TextView
            android:id="@+id/inventory_item_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_overview"
            style="@style/ItemStyle"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_price"
            style="@style/CategoryStyle"/>

        <TextView
            android:id="@+id/inventory_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_price"
            style="@style/ItemStyle"/>
    </LinearLayout>

</LinearLayout>